<resources>
    <string name="app_name">Aboutme</string>
    <string name="name">Yuki Sumida</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">
        The quick, brown fox jumps over a lazy dog.\n
        DJs flock by when MTV ax quiz prog.\n
        Junk MTV quiz graced by fox whelps.\n
        Bawds jog, flick quartz, vex nymphs.\n
        Waltz, bad nymph, for quick jigs vex! Fox nymphs grab quick-jived waltz.\n
        Brick quiz whangs jumpy veldt fox.\n
        Bright vixens jump; dozy fowl quack.\n
        Quick wafting zephyrs vex bold Jim.\n
        Quick zephyrs blow, vexing daft Jim.\n
        Sex-charged fop blew my junk TV quiz.\n
        How quickly daft jumping zebras vex.\n
        Two driven jocks help fax my big quiz.\n
        Quick, Baz, get my woven flax jodhpurs! "Now fax quiz Jack!" my brave ghost pled.\n
        Five quacking zephyrs jolt my wax bed.\n
        Flummoxed by job, kvetching W. zaps Iraq.\n
        Cozy sphinx waves quart jug of bad milk.\n
        A very bad quack might jinx zippy fowls.\n
        Few quips galvanized the mock jury box.\n
        Quick brown dogs jump over the lazy fox.\n
        The jay, pig, fox, zebra, and my wolves quack! Blowzy red vixens fight for a quick jump.\n
        Joaquin Phoenix was gazed by MTV for luck.\n
        A wizard’s job is to vex chumps quickly in fog.\n
        Watch "Jeopardy!", Alex Trebeki\'s fun TV quiz game.\n
        Woven silk pyjamas exchanged for blue quartz.\n
        Brawny gods just\n
    </string>
    <string name="what_is_your_nickname">What is your nickname</string>
    <string name="done">Done</string>
</resources>
