<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textPersonName"
            android:ems="10"
            android:id="@+id/nickname_edit" style="@style/NameStyle" android:hint="@string/what_is_your_nickname"
            android:textAlignment="center" android:autofillHints=""/>
    <Button
            android:text="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/layout_margin"
            android:fontFamily="@font/roboto"
            android:id="@+id/done_button"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image"
            android:contentDescription="@string/yellow_star" android:layout_marginTop="@dimen/layout_margin"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bio_scroll">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" app:srcCompat="@android:drawable/star_big_on"
                    android:id="@+id/imageView" android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding" android:layout_marginTop="16dp"/>
            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bio_text"
                    style="@style/NameStyle"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:lineSpacingMultiplier="1.2"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>